--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "books",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@googleapis/books": "^1.0.0",
-    "abstract-level": "^2.0.0",
-    "google-books-search": "^0.3.1",
-    "googleapis": "^144.0.0",
-    "level": "^8.0.0",
-    "next": "14.2.15",
-    "qrcode": "^1.5.4",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/qrcode": "^1.5.5",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "books",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@googleapis/books": "^1.0.0",
+        "abstract-level": "^2.0.0",
+        "google-books-search": "^0.3.1",
+        "googleapis": "^144.0.0",
+        "level": "^8.0.1",
+        "lmdb": "^3.1.3",
+        "next": "14.2.15",
+        "node-gyp-build-optional-packages": "^4.3.5",
+        "qrcode": "^1.5.4",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/qrcode": "^1.5.5",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.15",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    },
+    "engines": {
+        "node": ">=10.13.0"
+    }
 }
