--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@googleapis/books": "^1.0.0",
         "abstract-level": "^2.0.0",
+        "date-fns": "^4.1.0",
         "google-books-search": "^0.3.1",
         "googleapis": "^144.0.0",
         "level": "^8.0.1",
