--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dependencies": {
         "@googleapis/books": "^1.0.0",
         "abstract-level": "^2.0.0",
+        "bcrypt": "^5.1.1",
         "date-fns": "^4.1.0",
         "google-books-search": "^0.3.1",
         "googleapis": "^144.0.0",
+        "jose": "^5.9.6",
         "level": "^8.0.1",
         "lmdb": "^3.1.3",
         "next": "14.2.15",
@@ -23,6 +25,7 @@
         "react-dom": "^18"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/node": "^20",
         "@types/qrcode": "^1.5.5",
         "@types/react": "^18",
