--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
         "jose": "^5.9.6",
         "level": "^8.0.1",
         "lmdb": "^3.1.3",
-        "next": "14.2.15",
+        "next": "^15.1.3",
         "node-gyp-build-optional-packages": "^4.3.5",
         "qrcode": "^1.5.4",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-qr-code": "^2.0.15"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
